--- a/Global.css
+++ b/Global.css
@@ -11,94 +11,6 @@ body {
     background:#dbdbdb; 
 }
 
-/* MOBILE RESPONSIVITY */
-@media screen and (max-width: 350px) {
-    .header, .menu, .about, .sale, .chat, .extra {
-      grid-column: 1 / 10; /* The width is 100%, when the viewport is 600px or smaller */
-      grid-row: auto;
-    }
-    .toplist {
-        grid-column: 1 / 10;
-        grid-row: 4 / 7;
-    }
-    .column {
-        display: none;
-    }
-    .menu ul {
-        display: none;
-    }
-    .icon {
-        grid-column: 1 / 10;
-        grid-row: auto;
-        display: table;
-        position: right;
-        width:32;
-        height:auto;
-    }
-    .responsive {
-        width: 100%;
-    }
-    .display {
-        grid-column: auto;
-    }
-}
-
-/* TABLET RESPONSIVITY */
-@media screen and (max-width: 905px) {
-    .sale, .extra {
-      grid-column: 1 / 10; /* The width is 100%, when the viewport is 800px or smaller */
-    }
-    .sale {
-        grid-row: 7 / 8;
-    }
-    .extra {
-        grid-row: 10 / 11;
-    }
-    .toplist {
-        grid-column: 3 / 10;
-        grid-row: 3 / 7;
-    }
-    .about {
-        grid-column: 1 / 10;
-        grid-row: auto;
-    }
-    .chat {
-        grid-column: 1 / 10;
-        grid-row: auto;
-    }
-    .column {
-        display: none;
-    }
-    .menu {
-        grid-column: 1 / 3;
-        grid-row: 3 / 7;
-        margin: 0;
-        padding: 0;
-    }
-    .menu ul {
-        display: none;
-    }
-    .icon {
-        display: none;
-    }
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-    .display {
-        grid-column: 8 / 11;
-    }
-    .menu_categories {
-        display: none;
-    }
-    #burger {
-        grid-column: 1 / 2;
-        display: block;
-        width: 30px;
-        height: 30px;
-    }
-}
-
 /* MUTUAL ACROSS ALL PAGES*/
 /* HEADER */
     header {
@@ -118,16 +30,16 @@ body {
     .icon:hover { background-color: rgba(126, 126, 126, 0.3); }
   
 /* MENU */
-    .menu, .menu_categories {
+    .menu, .menu_responsive {
         grid-column: 1 / 10;
         grid-row: 3 / 4;
         display: flex;
         align-items: center;
         width: 100%;
-        background-color: moccasin;
+        margin: 0;
+        padding: 0;
     }
-    #burger { display: none; }
-    .menu ul, .menu_categories ul {
+    .menu ul, .menu_responsive ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
@@ -136,7 +48,7 @@ body {
         display: table-row;
         width: 100%;
     }
-    .menu ul li, .menu_categories ul li {
+    .menu ul li, .menu_responsive ul li {
         display: inline-block;
         padding: 8px;
         color: #333;
@@ -144,14 +56,15 @@ body {
         display: table-cell;
         width:10%
     }
-    .menu ul li a, .menu_categories ul li a {
+    .menu ul li a, .menu_responsive ul li a {
         display: block;
         color: #333;
         text-align: center;
         text-decoration: none;
         font-size: 14px;
     }
-    .menu ul :hover, .menu_categories ul :hover { background-color: #c7c7c7; }
+    .menu ul :hover, .menu_responsive ul :hover { background-color: #c7c7c7; }
+    .menu_responsive { visibility: hidden; }
     .active { background-color: #c7c7c7; }
     #search { margin-right: auto; }
 
@@ -166,187 +79,272 @@ body {
         color: #333;
         line-height: 1.4;
     }
+    .footer_info { 
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        font-size: 2em;
+        color: #fff;
+    }
 /* COMMON FEATURES */
 
 /* GALLERY DISPLAY */
 /* fit 4 blocks accross page */
-.gallery {
-    float: left;
-    width: 20%;
-    margin: 2%;
-    border: 1px solid #ccc;
-}
-.gallery:hover { border: 1px solid #777; }  
-.gallery img {
-    width: 100%;
-    height: auto;
-}
-.desc { text-align: center; }
-.responsive {
-    padding: 0 6px;
-    float: center;
-    width: 100%;
-}
-/* span across entire parent div */
-.display, .product_display {
-    clear: both;
-    grid-column: 1 / 10;
-    float: center;
-}  
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
+    .gallery {
+        float: left;
+        width: 20%;
+        margin: 2%;
+        border: 1px solid #ccc;
+    }
+    .gallery:hover { border: 1px solid #777; }  
+    .gallery img {
+        width: 100%;
+        height: auto;
+    }
+    .desc { text-align: center; }
+    .responsive {
+        padding: 0 6px;
+        float: center;
+        width: 100%;
+    }
+    /* span across entire parent div */
+    .display, .product_display, .first_display {
+        clear: both;
+        grid-column: 1 / 10;
+        float: center;
+    }  
+    .clearfix:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 
 /* INDEX */
 
 /* TOPLIST CARROUSELL */
-.toplist {
-    grid-column: 1 / 10;
-    grid-row: 4 / 7;
-    background-color: #AF8B9E;
-    text-align: center;
-}
-/* Hide the images by default */
-.top_games { display: none; } 
-.displayed_top_games {
-    height:225px; 
-    width:536.25px;
-}
-/* Next & previous buttons */
-.prev, .next {
-    cursor: pointer;
-    padding: 20px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-}
-.next {
-    border-radius: 3px 0 0 3px;
-}
-.prev:hover, .next:hover {
-    background-color: rgba(0, 0, 0, 0.6);
-} 
-.number_text {
-    display: none;
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-}
-/* Fading animation */
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-.row:after {
-    grid-row: 6 / 7;
-    grid-column: inherit;
-    content: "";
-    display: table;
-    clear: both;
-} 
-/* ten columns side by side */
-.column {
-    float: left;
-    width: 10%;
-}
-/* Add a transparency effect for thumnbail images */
-.demo {
-    opacity: 0.6;
-    width:auto;
-}
-.active, .demo:hover { opacity: 1; }
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-}
+    .toplist {
+        grid-column: 1 / 10;
+        grid-row: 4 / 7;
+        background-color: #AF8B9E;
+        text-align: center;
+    }
+    /* Hide the images by default */
+    .top_games { display: none; } 
+    .displayed_top_games {
+        height:225px; 
+        width:536.25px;
+    }
+    /* Next & previous buttons */
+    .prev, .next {
+        cursor: pointer;
+        padding: 20px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+    .next {
+        border-radius: 3px 0 0 3px;
+    }
+    .prev:hover, .next:hover {
+        background-color: rgba(0, 0, 0, 0.6);
+    } 
+    .number_text {
+        display: none;
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+    }
+    /* Fading animation */
+    .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+    }
+    .row:after {
+        grid-row: 6 / 7;
+        grid-column: inherit;
+        content: "";
+        display: table;
+        clear: both;
+    } 
+    /* ten columns side by side */
+    .column {
+        float: left;
+        width: 10%;
+    }
+    /* Add a transparency effect for thumnbail images */
+    .demo {
+        opacity: 0.6;
+        width:auto;
+    }
+    .active, .demo:hover { opacity: 1; }
+    @keyframes fade {
+        from {opacity: .4}
+        to {opacity: 1}
+    }
 
 /* ABOUT SECTION */
-.about {
-    grid-column: 1 / 5;
-    grid-row: 7 / 9;
-    background: #561A3C;
-    text-align: center;
-    font-size: 1em;
-    color: #c7c7c7;
-    line-height: 1.4;
-}
+    .about {
+        grid-column: 1 / 5;
+        grid-row: 7 / 9;
+        background: #561A3C;
+        text-align: center;
+        font-size: 1em;
+        color: #c7c7c7;
+        line-height: 1.4;
+    }
 
 /* SALE OR SELECTED PRODUCTS */
-.sale {
-    grid-column: 5 / 10;
-    grid-row: 7 / 9;
-    background-color: #7F3661;
-    text-align: center;
-    font-size: 1em;
-    color: #c7c7c7;
-    line-height: 1.4;
-}
+    .sale {
+        grid-column: 5 / 10;
+        grid-row: 7 / 9;
+        background-color: #7F3661;
+        text-align: center;
+        font-size: 1em;
+        color: #c7c7c7;
+        line-height: 1.4;
+    }
 
 /* RECENT CHATS */
-.chat {
-    background-color: paleturquoise;
-    grid-column: 1 / 6;
-    grid-row: 9 / 11;
-}
-.chat td, .chat th {
-    border: 1px solid #ddd;
-    padding: 8px;
-}
-.chat tr:nth-child(even) { background-color: #f2f2f2; }
-.chat tr:hover {background-color: #ddd;}
-.chat th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #AF8B9E;
-  color: white;
-}
+    .chat {
+        background-color: paleturquoise;
+        grid-column: 1 / 6;
+        grid-row: 9 / 11;
+    }
+    .chat td, .chat th {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+    .chat tr:nth-child(even) { background-color: #f2f2f2; }
+    .chat tr:hover {background-color: #ddd;}
+    .chat th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #AF8B9E;
+    color: white;
+    }
 /* IMAGE OR VIDEO */
-.extra {
-    grid-column: 6 / 10;
-    grid-row: 9 / 11;
-    text-align: center;
-    font-size: 1em;
-    color: #333;
-    line-height: 1.4;
-    background-color: rebeccapurple;
-}
-.extra img {
-    max-width:100%;
-    height:auto;
-}
+    .extra {
+        grid-column: 6 / 10;
+        grid-row: 9 / 11;
+        text-align: center;
+        font-size: 1em;
+        color: #333;
+        line-height: 1.4;
+        background-color: rebeccapurple;
+    }
+    .extra img {
+        max-width:100%;
+        height:auto;
+    }
 
 /* PRODUCTS */
-.category_info {
-    background-color: paleturquoise;
-    grid-column: 1 / 6;
-    grid-row: 4 / 7;
-}
-h2, .category_info p {
-    float: left;
-    color: #333;
-    font-size: 2em;
-    padding: 5px;
-    margin: 5px;
-}
-.category_info p {
-    font-size: 1em;
-}
-.aside_products {
-    grid-column: 6 / 10;
-    grid-row: 4 / 7;
-    text-align: center;
-    font-size: 1em;
-    color: #333;
-    line-height: 1.4;
-    background-color: rebeccapurple;
-}
-.aside_products img {
-    max-width:100%;
-    height:auto;
-}
+    .category_info {
+        background-color: paleturquoise;
+        grid-column: 1 / 6;
+        grid-row: 4 / 7;
+    }
+    h2, .category_info p {
+        float: left;
+        color: #333;
+        font-size: 2em;
+        padding: 5px;
+        margin: 5px;
+    }
+    .category_info p { font-size: 1em; }
+    .aside_products {
+        grid-column: 6 / 10;
+        grid-row: 4 / 7;
+        text-align: center;
+        font-size: 1em;
+        color: #333;
+        line-height: 1.4;
+        background-color: rebeccapurple;
+    }
+    .aside_products img {
+        max-width:100%;
+        height:auto;
+    }
+
+/* TABLET RESPONSIVITY */
+    @media screen and (max-width: 800px) {
+        .container{
+            display: grid;
+            grid-template-columns: 75px 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
+            grid-template-rows: 75px 75px 75px 75px auto 75px auto 1fr 1fr auto auto;
+            background:#dbdbdb; 
+        }
+
+        #logo { width: 100%; }
+        .icon { display: none; }
+        .menu { display: none; }
+        .menu_responsive {
+            visibility: visible;
+            grid-column: 1 / 3;
+            grid-row: 3 / 7;
+            margin: 0;
+            padding: 0;
+        }
+        .menu_responsive ul li {
+            background-color: #dbdbdb;
+            display: block;
+            padding: 12px;
+            width: 100%;
+            text-decoration: none;
+        }
+        .menu_responsive ul li a { text-align: left; }
+        #search { display: none; }
+        .gallery { width: 20%; }
+        .responsive { width: 49.99999%; margin: 6px 0; }
+        .first_display { grid-column: 3 / 10; }
+        .toplist {
+            grid-column: 3 / 10;
+            grid-row: 3 / 7;
+        }
+        .column { display: none; }
+        .about {
+            grid-column: 1 / 10;
+            grid-row: auto;
+        }
+        .sale, .extra { grid-column: 1 / 10; }  /* The width is 100%, when the viewport is 905px or smaller */
+        .sale { grid-row: 7 / 8; }
+        .extra { grid-row: 10 / 11; }
+        .chat {
+            grid-column: 1 / 10;
+            grid-row: auto;
+        }
+        .category_info { grid-row: 3 / 7; grid-column: 3 / 10; }
+        .aside_products { display: none;}
+    }
+/* MOBILE RESPONSIVITY */
+    @media screen and (max-width: 350px) {
+        .header, .menu, .about, .sale, .chat, .extra {
+        grid-column: 1 / 10; /* The width is 100%, when the viewport is 600px or smaller */
+        grid-row: auto;
+        }
+        .toplist {
+            grid-column: 1 / 10;
+            grid-row: 4 / 7;
+        }
+        .column {
+            display: none;
+        }
+        .menu ul {
+            display: none;
+        }
+        .icon {
+            grid-column: 1 / 10;
+            grid-row: auto;
+            display: table;
+            position: right;
+            width:32;
+            height:auto;
+        }
+        .responsive {
+            width: 100%;
+        }
+        .display {
+            grid-column: auto;
+        }
+    }
