--- a/Global.css
+++ b/Global.css
@@ -26,8 +26,8 @@ body {
         float: left;
     }
     #quick_link { padding: 0px; float: right;}
-    .icon { display: inline-flex; padding: 10px; }
-    .icon:hover { background-color: rgba(126, 126, 126, 0.3); }
+    .icon, .a_icon { display: inline-flex; padding: 10px; }
+    .icon:hover, .a_icon:hover, .a_icon { background-color: rgba(126, 126, 126, 0.3); }
   
 /* MENU */
     .menu, .menu_responsive {
@@ -66,8 +66,6 @@ body {
     .menu ul :hover, .menu_responsive ul :hover { background-color: #c7c7c7; }
     .menu_responsive { visibility: hidden; }
     .active { background-color: #c7c7c7; }
-    #search { margin-right: auto; }
-
 /* FOOTER */
     .footer {
         grid-column: 1 / 10;
@@ -84,6 +82,8 @@ body {
         font-size: 2em;
         color: #fff;
     }
+
+    p { margin: 6px; }
 /* COMMON FEATURES */
 
 /* GALLERY DISPLAY */
@@ -91,10 +91,10 @@ body {
     .gallery {
         float: left;
         width: 20%;
-        margin: 2%;
+        margin: 1%;
         border: 1px solid #ccc;
     }
-    .gallery:hover { border: 1px solid #777; }  
+    .gallery:hover { border: 1px solid #333; }  
     .gallery img {
         width: 100%;
         height: auto;
@@ -102,15 +102,15 @@ body {
     .desc { text-align: center; }
     .responsive {
         padding: 0 6px;
-        float: center;
         width: 100%;
     }
     /* span across entire parent div */
-    .display, .product_display, .first_display {
+    .display, .product_display, .category_display {
         clear: both;
-        grid-column: 1 / 10;
+        grid-column: 2 / 10;
+        grid-row: auto;
         float: center;
-    }  
+    }
     .clearfix:after {
         content: "";
         display: table;
@@ -118,7 +118,6 @@ body {
     }
 
 /* INDEX */
-
 /* TOPLIST CARROUSELL */
     .toplist {
         grid-column: 1 / 10;
@@ -187,7 +186,7 @@ body {
     .about {
         grid-column: 1 / 5;
         grid-row: 7 / 9;
-        background: #561A3C;
+        background-image: linear-gradient(#561A3C,#7F3661);
         text-align: center;
         font-size: 1em;
         color: #c7c7c7;
@@ -198,26 +197,30 @@ body {
     .sale {
         grid-column: 5 / 10;
         grid-row: 7 / 9;
-        background-color: #7F3661;
+        background-image: linear-gradient(#7F3661, #561A3C);
         text-align: center;
         font-size: 1em;
         color: #c7c7c7;
         line-height: 1.4;
     }
 
-/* RECENT CHATS */
-    .chat {
-        background-color: paleturquoise;
+/* RECENT FORUM POSTS */
+    .forum_smal { display: none;}
+    .forum_preview {
         grid-column: 1 / 6;
         grid-row: 9 / 11;
     }
-    .chat td, .chat th {
+    .forum, .category_display {
+       grid-column: 3 / 10;
+       grid-row: 4 / 11;
+    }
+    .forum_preview td, .forum_preview th, .forum td, .forum th, .forum_smal td, .forum_smal th {
         border: 1px solid #ddd;
         padding: 8px;
     }
-    .chat tr:nth-child(even) { background-color: #f2f2f2; }
-    .chat tr:hover {background-color: #ddd;}
-    .chat th {
+    .forum_preview tr:nth-child(even), .forum tr:nth-child(even), .forum_smal tr:nth-child(even) { background-color: #f2f2f2; }
+    .forum_preview tr:hover, .forum tr:hover, .forum_smal tr:hover {background-color: #c7c7c7;}
+    .forum_preview th, .forum th, .forum_smal th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
@@ -232,27 +235,32 @@ body {
         font-size: 1em;
         color: #333;
         line-height: 1.4;
-        background-color: rebeccapurple;
     }
-    .extra img {
+    .extra video {
         max-width:100%;
         height:auto;
+        border:rgba(126, 126, 126, 0.3);
     }
 
 /* PRODUCTS */
     .category_info {
-        background-color: paleturquoise;
         grid-column: 1 / 6;
         grid-row: 4 / 7;
     }
-    h2, .category_info p {
+    h2, .info {
         float: left;
         color: #333;
         font-size: 2em;
         padding: 5px;
         margin: 5px;
     }
-    .category_info p { font-size: 1em; }
+    .info { 
+        font-size: 1em; 
+    }
+    .all_categories {
+        text-align: center;
+        margin-top: 20px;
+    }
     .aside_products {
         grid-column: 6 / 10;
         grid-row: 4 / 7;
@@ -260,31 +268,69 @@ body {
         font-size: 1em;
         color: #333;
         line-height: 1.4;
-        background-color: rebeccapurple;
     }
     .aside_products img {
         max-width:100%;
         height:auto;
     }
 
+/* LOGIN PAGE */
+
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    
+    input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    
+    input[type=submit]:hover {
+        background-color: #45a049;
+    }
+    
+    .login {
+        grid-column: 6 / 8;
+        grid-row: 5 / 9;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+    .create_acount {
+        grid-column: 3 / 6;
+        grid-row: 5 / 9;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+    }
+
 /* TABLET RESPONSIVITY */
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 820px) {
         .container{
             display: grid;
-            grid-template-columns: 75px 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
+            grid-template-columns: 1fr 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
             grid-template-rows: 75px 75px 75px 75px auto 75px auto 1fr 1fr auto auto;
             background:#dbdbdb; 
         }
-
+        .active { background-color: #c7c7c7; }
         #logo { width: 100%; }
-        .icon { display: none; }
-        .menu { display: none; }
+        .icon, .a_icon, .menu { display: none; }
         .menu_responsive {
             visibility: visible;
             grid-column: 1 / 3;
             grid-row: 3 / 7;
-            margin: 0;
-            padding: 0;
         }
         .menu_responsive ul li {
             background-color: #dbdbdb;
@@ -295,12 +341,15 @@ body {
         }
         .menu_responsive ul li a { text-align: left; }
         #search { display: none; }
-        .gallery { width: 20%; }
-        .responsive { width: 49.99999%; margin: 6px 0; }
-        .first_display { grid-column: 3 / 10; }
+        .gallery { width: 45%; margin: 1%; margin-right: 1%;}
+        .responsive { width: 99.99999%; margin: 6px 0; }
         .toplist {
             grid-column: 3 / 10;
             grid-row: 3 / 7;
+        }
+        .displayed_top_games {
+            height: auto; 
+            max-width: 400px;
         }
         .column { display: none; }
         .about {
@@ -310,41 +359,57 @@ body {
         .sale, .extra { grid-column: 1 / 10; }  /* The width is 100%, when the viewport is 905px or smaller */
         .sale { grid-row: 7 / 8; }
         .extra { grid-row: 10 / 11; }
-        .chat {
+        .forum, .category_display {
+            grid-column: 3 / 10;
+            grid-row: 3 / 11;
+        }
+        .forum_preview {
             grid-column: 1 / 10;
             grid-row: auto;
         }
         .category_info { grid-row: 3 / 7; grid-column: 3 / 10; }
         .aside_products { display: none;}
+        .login {
+            grid-column: 3 / 8;
+            grid-row: 3 / 6;
+        }
+        .create_acount {
+            grid-column: 3 / 8;
+            grid-row: 6 / 8;
+        }
     }
 /* MOBILE RESPONSIVITY */
-    @media screen and (max-width: 350px) {
-        .header, .menu, .about, .sale, .chat, .extra {
-        grid-column: 1 / 10; /* The width is 100%, when the viewport is 600px or smaller */
-        grid-row: auto;
+    @media screen and (max-width: 400px) {
+        .container{
+            display: grid;
+            grid-template-columns: 1fr 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
+            grid-template-rows: 75px 75px 75px 75px auto 75px auto 1fr 1fr auto auto;
         }
-        .toplist {
-            grid-column: 1 / 10;
-            grid-row: 4 / 7;
+        .header, .about, .forum_smal, .toplist, .login, .create_acount { grid-column: 1 / 10; }
+        .forum_smal {display: block;}
+        .forum_preview {display: none;}
+        .toplist { grid-row: 3 / 7; }
+        .displayed_top_games {
+            height: auto; 
+            width: 300px;
         }
-        .column {
-            display: none;
+        .responsive, #logo { width: 100%; }
+        .display { grid-column: auto; }
+        .active { background-color: #c7c7c7; }
+        .icon, .a_icon, .menu_responsive, #search, .column { display: none; }
+        .gallery { 
+            width: 45%; 
+            margin: 1%; 
+            margin-right: 1%;
         }
-        .menu ul {
-            display: none;
+        .responsive { 
+            width: 99.99999%; 
+            margin: 6px 0; 
         }
-        .icon {
-            grid-column: 1 / 10;
-            grid-row: auto;
-            display: table;
-            position: right;
-            width:32;
-            height:auto;
-        }
-        .responsive {
-            width: 100%;
-        }
-        .display {
-            grid-column: auto;
-        }
+        .category_info { grid-row: 3 / 7; grid-column: 3 / 10; }
+        .aside_products { display: none;}
+        .login { grid-row: 3 / 6; }
+        .create_acount { grid-row: 6 / 8; }
+        .about { grid-row: 8 / 9; }
+        .forum_preview { grid-row: 9 / 10; }
     }
