--- a/Global.css
+++ b/Global.css
@@ -63,9 +63,8 @@ body {
         text-decoration: none;
         font-size: 14px;
     }
-    .menu ul :hover, .menu_responsive ul :hover { background-color: #c7c7c7; }
+    .menu ul :hover, .menu_responsive ul :hover, .active { background-color: #c7c7c7; }
     .menu_responsive { visibility: hidden; }
-    .active { background-color: #c7c7c7; }
 /* FOOTER */
     .footer {
         grid-column: 1 / 10;
@@ -85,7 +84,6 @@ body {
 
     p { margin: 6px; }
 /* COMMON FEATURES */
-
 /* GALLERY DISPLAY */
 /* fit 4 blocks accross page */
     .gallery {
@@ -210,11 +208,10 @@ body {
         grid-column: 1 / 6;
         grid-row: 9 / 11;
     }
-    .forum, .category_display {
+    .forum{
        grid-column: 3 / 8;
        grid-row: 4 / 11;
     }
-    .category_display { grid-column: 3 / 10;}
     .forum_preview td, .forum_preview th, .forum td, .forum th, .forum_smal td, .forum_smal th {
         border: 1px solid #ddd;
         padding: 8px;
@@ -320,18 +317,23 @@ body {
 /* TABLET RESPONSIVITY */
     @media screen and (max-width: 820px) {
         .container{
-            display: grid;
             grid-template-columns: 1fr 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
             grid-template-rows: 75px 75px 75px 75px auto 75px auto 1fr 1fr auto auto;
-            background:#dbdbdb; 
         }
-        .active { background-color: #c7c7c7; }
         #logo { width: 100%; }
-        .icon, .a_icon, .menu { display: none; }
-        .menu_responsive {
-            visibility: visible;
-            grid-column: 1 / 3;
-            grid-row: 3 / 7;
+        .icon, .a_icon, .menu, .column, .aside_products { display: none; }
+        .displayed_top_games {
+            height: auto; 
+            max-width: 400px;
+        }
+        .responsive { 
+            width: 99.99999%; 
+            margin: 6px 0; 
+        }
+        .gallery { 
+            width: 45%; 
+            margin: 1%; 
+            margin-right: 1%;
         }
         .menu_responsive ul li {
             background-color: #dbdbdb;
@@ -341,76 +343,39 @@ body {
             text-decoration: none;
         }
         .menu_responsive ul li a { text-align: left; }
-        #search { display: none; }
-        .gallery { width: 45%; margin: 1%; margin-right: 1%;}
-        .responsive { width: 99.99999%; margin: 6px 0; }
-        .toplist {
-            grid-column: 3 / 10;
-            grid-row: 3 / 7;
+
+        .menu_responsive {
+            visibility: visible;
+            grid-column: 1 / 3;
         }
-        .displayed_top_games {
-            height: auto; 
-            max-width: 400px;
-        }
-        .column { display: none; }
-        .about {
-            grid-column: 1 / 10;
-            grid-row: auto;
-        }
-        .sale, .extra { grid-column: 1 / 10; }  /* The width is 100%, when the viewport is 905px or smaller */
+
+        .forum_preview, .sale, .extra, .about { grid-column: 1 / 10; }
+        .toplist, .forum, .category_display, .category_info { grid-column: 3 / 10; }
+        .login, .create_acount { grid-column: 3 / 8; }
+
+        .forum_preview, .about { grid-row: auto; }
+        .login { grid-row: 3 / 6; }
+        .category_info, .menu_responsive, .toplist {  grid-row: 3 / 7;  }
+        .forum, .category_display { grid-row: 3 / 9; }
+        .create_acount { grid-row: 6 / 9; }
         .sale { grid-row: 7 / 8; }
         .extra { grid-row: 10 / 11; }
-        .forum, .category_display {
-            grid-column: 3 / 10;
-            grid-row: 3 / 11;
-        }
-        .forum_preview {
-            grid-column: 1 / 10;
-            grid-row: auto;
-        }
-        .category_info { grid-row: 3 / 7; grid-column: 3 / 10; }
-        .aside_products { display: none;}
-        .login {
-            grid-column: 3 / 8;
-            grid-row: 3 / 6;
-        }
-        .create_acount {
-            grid-column: 3 / 8;
-            grid-row: 6 / 8;
-        }
     }
 /* MOBILE RESPONSIVITY */
     @media screen and (max-width: 500px) {
         .container{
-            display: grid;
-            grid-template-columns: 1fr 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
             grid-template-rows: 75px 25px 75px 75px auto 75px auto 1fr 1fr auto auto;
         }
-        .header, .about, .forum_smal, .toplist, .login, .create_acount { grid-column: 1 / 10; }
-        .forum_smal {display: block;}
-        .forum_preview {display: none;}
-        .toplist { grid-row: 3 / 7; }
-        .displayed_top_games {
-            height: auto; 
-            width: 300px;
-        }
-        .responsive, #logo { width: 100%; }
+
+        .displayed_top_games { width: 300px; }
+        .forum_smal { display: block; }
+        .forum_preview, .menu_responsive { display: none; }
+
+        .forum_smal, .toplist, .login, .create_acount, .category_info, .category_display, .product_display, .forum { grid-column: 1 / 10; }
         .display { grid-column: auto; }
-        .active { background-color: #c7c7c7; }
-        .icon, .a_icon, .menu_responsive, #search, .column { display: none; }
-        .gallery { 
-            width: 45%; 
-            margin: 1%; 
-            margin-right: 1%;
-        }
-        .responsive { 
-            width: 99.99999%; 
-            margin: 6px 0; 
-        }
-        .category_info, .category_display, .forum { grid-row: 3 / 7; grid-column: 1 / 10; }
-        .aside_products { display: none;}
-        .login { grid-row: 3 / 6; }
-        .create_acount { grid-row: 6 / 8; }
+
+        .category_display, .forum, .toplist { grid-row: 3 / 9; }
+        .product_display { grid-row: 7 / 9;}
         .about { grid-row: 8 / 9; }
         .forum_preview { grid-row: 9 / 10; }
     }
