--- a/Global.css
+++ b/Global.css
@@ -7,7 +7,7 @@ body {
 .container{
     display: grid;
     grid-template-columns: 75px 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
-    grid-template-rows: 75px 75px auto auto auto 75px auto 1fr 1fr auto auto;
+    grid-template-rows: 45px 45px 45px auto auto 75px auto 1fr 1fr auto auto;
     background:#dbdbdb; 
 }
 
@@ -21,50 +21,40 @@ body {
         color: #333;
     }
     #logo { 
-        padding: 20px; 
+        padding: 0;
         width: 75%; 
         float: left;
     }
-    #quick_link { padding: 0px; float: right;}
-    .icon, .a_icon, .l_icon { display: inline-flex; padding: 10px; }
-    .icon:hover, .a_icon:hover, .l_icon:hover, .a_icon { background-color: rgba(126, 126, 126, 0.3); }
+    #quick_link { padding: 0px; float: right; display: inline-flex;}
+    #quick_link a { padding: 10px; }
+    #quick_link a:hover { background-color: rgba(126, 126, 126, 0.3); }
   
 /* MENU */
-    .menu, .menu_responsive {
+    #search {float: right;}
+    .menu {
         grid-column: 1 / 10;
         grid-row: 3 / 4;
-        display: flex;
-        align-items: center;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-    }
-    .menu ul, .menu_responsive ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
         overflow: hidden;
-        background-color: #dbdbdb;
-        display: table-row;
-        width: 100%;
+        margin: 0; 
+        padding: 0;
     }
-    .menu ul li, .menu_responsive ul li {
-        display: inline-block;
-        padding: 8px;
-        color: #333;
-        box-shadow: 0 0px 1px rgba(0,0,0,0.12);
-        display: table-cell;
-        width:10%
-    }
-    .menu ul li a, .menu_responsive ul li a {
+    .menu a {
+        float: left;
         display: block;
-        color: #333;
+        color: #0C351F;
         text-align: center;
+        padding: 14px 16px;
         text-decoration: none;
-        font-size: 14px;
+        font-size: 16px;             
     }
-    .menu ul :hover, .menu_responsive ul :hover, .active { background-color: #c7c7c7; }
-    .menu_responsive { visibility: hidden; }
+    .menu a:hover {
+        background-color: #c7c7c7;
+    }
+    .menu a.active {
+        background-color: #c7c7c7;
+    }
+    .menu .icon { display: none; }
+    
 /* FOOTER */
     .footer {
         grid-column: 1 / 10;
@@ -88,9 +78,10 @@ body {
 /* fit 4 blocks accross page */
     .gallery {
         float: left;
-        width: 20%;
+        width: 23%;
         margin: 1%;
-        border: 1px solid #ccc;
+        border: 1px solid #333;
+        background-color: #c7c7c7;
     }
     .gallery:hover { border: 1px solid #333; }  
     .gallery img {
@@ -105,10 +96,11 @@ body {
     /* span across entire parent div */
     .display, .product_display, .category_display {
         clear: both;
-        grid-column: 2 / 10;
-        grid-row: auto;
+        grid-column: 1 / 10;
+        grid-row: 4 / 11;
         float: center;
     }
+    .product_display { grid-row: 7 / 11; }
     .clearfix:after {
         content: "";
         display: table;
@@ -132,7 +124,10 @@ body {
     /* Next & previous buttons */
     .prev, .next {
         cursor: pointer;
-        padding: 20px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        padding-left: 20px;
+        padding-right: 20px;
         color: white;
         font-weight: bold;
         font-size: 20px;
@@ -140,12 +135,10 @@ body {
         user-select: none;
         -webkit-user-select: none;
     }
-    .next {
-        border-radius: 3px 0 0 3px;
+    .next { border-radius: 3px 0 0 3px;
     }
-    .prev:hover, .next:hover {
-        background-color: rgba(0, 0, 0, 0.6);
-    } 
+    .prev:hover { background-image: linear-gradient(to right, #af8b9ead,rgba(89, 89, 89, 0.424)); } 
+    .next:hover { background-image: linear-gradient(to left, #af8b9ead,rgba(89, 89, 89, 0.424)); }
     .number_text {
         display: none;
         color: #f2f2f2;
@@ -174,7 +167,7 @@ body {
         opacity: 0.6;
         width:auto;
     }
-    .active, .demo:hover { opacity: 1; }
+    #quicklink a.active, .demo:hover { opacity: 1; }
     @keyframes fade {
         from {opacity: .4}
         to {opacity: 1}
@@ -318,10 +311,11 @@ body {
     @media screen and (max-width: 820px) {
         .container{
             grid-template-columns: 1fr 75px 2fr 2fr 4fr 3fr 1fr 1fr 1fr;
-            grid-template-rows: 75px 75px 75px 75px auto 75px auto 1fr 1fr 1fr auto;
+            grid-template-rows: 45px 45px 45px 75px 150px 75px auto 1fr 1fr 1fr auto;
         }
         #logo { width: 100%; }
-        .icon, .l_icon, .a_icon, .menu, .column, .aside_products { display: none; }
+        .column, .aside_products, .menu a:not(:first-child) { display: none; }
+        
         .displayed_top_games {
             height: auto; 
             max-width: 400px;
@@ -335,28 +329,48 @@ body {
             margin: 1%; 
             margin-right: 1%;
         }
-        .menu_responsive ul li {
-            background-color: #dbdbdb;
+        .menu a.icon {
+            float: right;
             display: block;
-            padding: 12px;
-            width: 100%;
-            text-decoration: none;
         }
-        .menu_responsive ul li a { text-align: left; }
-
-        .menu_responsive {
-            visibility: visible;
-            grid-column: 1 / 3;
+        .menu.responsive { 
+            grid-row: 3/7;
+            position: relative;
+            margin: 0; 
+            padding: 0;
+            background-color: rgba(151, 151, 151, 0.8);
         }
-
+        .menu.responsive .icon {
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+        .search {float: none;}
+        .menu.responsive a {
+            float: none;
+            display: block;
+            text-align: left;
+        }
+        .bar {
+            width: 20px;
+            height: 2.7px;
+            background-color: #0C351F;
+            margin: 3px 0;
+            transition: 0.4s;
+        }
+        .change #bar1 { transform: translate(0, 11px) rotate(-45deg); }
+        .change #bar2 {opacity: 0;}
+        .change #bar3 { transform: translate(0, -11px) rotate(45deg); }
+            
         .forum_preview, .sale, .extra, .about { grid-column: 1 / 10; }
-        .toplist, .forum, .category_display, .category_info { grid-column: 3 / 10; }
-        .login, .create_acount { grid-column: 3 / 8; }
+        .forum, .category_info { grid-column: 2 / 9; }
+        .category_display { grid-column: 2 / 10;}
+        .login, .create_acount { grid-column: 2 / 9; }
 
         .forum_preview, .about { grid-row: auto; }
-        .login { grid-row: 3 / 6; }
-        .category_info, .menu_responsive, .toplist {  grid-row: 3 / 7;  }
-        .forum, .category_display { grid-row: 3 / 11; }
+        .login { grid-row: 4 / 6; }
+        .category_info, .toplist {  grid-row: 4 / 7;  }
+        .forum, .category_display { grid-row: 4 / 11; }
         .create_acount { grid-row: 6 / 10; }
         .sale { grid-row: 7 / 8; }
         .extra { grid-row: 10 / 11; }
@@ -364,19 +378,17 @@ body {
 /* MOBILE RESPONSIVITY */
     @media screen and (max-width: 500px) {
         .container{
-            grid-template-rows: 75px 30px 75px 75px auto 75px auto 1fr 1fr 1fr auto;
+            grid-template-rows: 45px 45px 45px 75px auto 75px auto 1fr 1fr 1fr auto;
         }
 
         .displayed_top_games { width: 300px; }
-        .forum_smal, .menu, .l_icon, .a_icon { display: block; }
+        .forum_smal, .l_icon, .a_icon { display: block; }
         .forum_preview, .menu_responsive { display: none; }
 
-        .menu, .forum_smal, .toplist, .login, .create_acount, .category_info, .category_display, .product_display, .forum { grid-column: 1 / 10; }
+        .forum_smal, .toplist, .login, .create_acount, .category_info, .category_display, .product_display, .forum { grid-column: 1 / 10; }
         .display { grid-column: auto; }
 
-        .menu { grid-row: 2 / 3;}
         .category_display, .forum { grid-row: 3 / 10;}
-        .toplist { grid-row: 3 / 9; }
         .product_display { grid-row: 7 / 11;}
         .about { grid-row: 8 / 9; }
         .forum_preview { grid-row: 9 / 10; }
