--- a/Global.css
+++ b/Global.css
@@ -101,10 +101,14 @@ body {
         border: 1px solid #333;
         background-color: #c7c7c7;
     }
-    .gallery:hover { border: 1px solid #333; }  
+    .gallery:hover { 
+        border: 1px solid #333; 
+        transform: scale(1.01);
+    }  
     .gallery img {
         width: 100%;
         height: auto;
+        transition:  0.4s ease-in-out;
     }
     .desc { text-align: center; color: #333;}
     .responsive {
@@ -119,6 +123,20 @@ body {
         float: center;
     }
     .product_display { grid-row: 7 / 11; }
+    .buy {
+        float: right;
+        color: #dbdbdb;
+        background-color: #333;
+        border-radius: 8px;
+        font-size: 14px;
+        text-decoration: none;        
+        font-size: 16px;
+        margin: 6px;
+    }
+    .buy:hover {
+        background-color: #0b6f46;
+    }
+
     .clearfix:after {
         content: "";
         display: table;
