--- a/Global.css
+++ b/Global.css
@@ -139,7 +139,14 @@ body {
         height: auto;
         transition:  0.4s ease-in-out;
     }
-    .desc { text-align: center; color: #333;}
+    .desc { 
+        text-align: center; 
+        color: #333;
+    }
+    .exp { 
+        padding: 10px; 
+        display: none;
+    }
     .responsive {
         padding: 0 6px;
         width: 100%;
